2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:
	* src/universal-cp-eventtreeview.c:

	- Add event treeview context menu.
	- Add ability to copy&paste from event treeview.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:
	* src/universal-cp-detailstreeview.c:

	- Add details treeview context menu.
	- Add ability to copy&paste from details treeview.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-detailstreeview.h:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-eventtreeview.h:
	* src/universal-cp-gui.c:
	* src/universal-cp-gui.h:

	Put details and event treeview handling in separate modules.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-gui.c:

	Fix a small build problem.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	subscribe to events after settting the notify callbacks.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-gui.c:

	Prepend rather than append the events to the event log treeview.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-gui.c:

	Double-click on a service row, inverts the subscription status to that
	service.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-actiondialog.h:
	* src/universal-cp-gui.c:

	Rename the device treeview row activation signal handler so it doesn't
	look bad when we use the same handler for service subscription and
	move it to -gui module.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	services are subscribed to, by default.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	Only host the dir where the description doc is found.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
